objects/Account.object
<CustomObject>
    <fields>
        <fullName>Ultimate_Parent_Banker__c</fullName>
        <formula>IF( 
OR($RecordType.Name = &quot;Relationship Group&quot;, $RecordType.Name = &quot;Prospect&quot;), 
Parent.Owner.FirstName + &quot; &quot; + Parent.Owner.LastName, 
Parent.Parent.Owner.FirstName + &quot; &quot; + Parent.Parent.Owner.LastName 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent Banker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Hub__c</fullName>
        <formula>IF( 
OR($RecordType.Name = &quot;Relationship Group&quot;, $RecordType.Name = &quot;Prospect&quot;), 
Parent.Hub_F__c, 
Parent.Parent.Hub_F__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent Hub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent__c</fullName>
        <formula>IF( 
OR($RecordType.Name = &quot;Relationship Group&quot;, $RecordType.Name = &quot;Prospect&quot;), 
Parent.Name, 
Parent.Parent.Name 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Code__c</fullName>
        <description>RN - CloudSmiths
This code will be used to search for Relationships in SF from the CIF integration quick action</description>
        <inlineHelpText>You can add multiple user codes by separating them with a comma. e.g. 33333,44444,55555</inlineHelpText>
        <label>User Code(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X15a6_Classification__c</fullName>
        <label>15a6 Classification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__CaseSafeID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>groupScheme__c</fullName>
        <description>This is a field stored in Salesforce when searching clients on the ADAPT360 service. The value is stored in Salesforce from the ADAPT360 service for reporting purposes.</description>
        <label>Customer Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isBuyingGroup__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;Relationship_Group&apos;, true, false)</formula>
        <label>isBuyingGroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRelationshipGroup__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;Relationship_Group&apos;, true, false)</formula>
        <label>isRelationshipGroup</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Approved_On_Panel_Law_Firms</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>BEE_Status__c</columns>
        <columns>BO__c</columns>
        <columns>BWO__c</columns>
        <columns>Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.On_Off_Panel_Law_Firm</value>
        </filters>
        <filters>
            <field>Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Approved - On Panel Law Firms</label>
        <sharedTo>
            <group>LEAP_Admin_Users_to_add_Off_Panel</group>
            <roleAndSubordinatesInternal>COO_Legal_Legal</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>COO_Legal_Litigation</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_EDC_Relationships</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Client_Status__c</columns>
        <columns>Client_Region__c</columns>
        <columns>Segment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.EDC_Client</value>
        </filters>
        <label>All EDC Relationships</label>
        <sharedTo>
            <role>Retail_Distribution</role>
            <role>Retail_Distribution_EDC_TM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_My_EDC_Relationships</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Client_type__c</columns>
        <columns>Segment__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.EDC_Client</value>
        </filters>
        <label>All My EDC Relationships</label>
        <sharedTo>
            <role>Retail_Distribution</role>
            <role>Retail_Distribution_EDC_TM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coastal_Relationship_Groups_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Team_F__c</columns>
        <columns>Segment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hub_F__c</field>
            <operation>contains</operation>
            <value>coastal</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Relationship_Group,Account.Prospect</value>
        </filters>
        <label>Coastal Relationship Groups &amp; Prospects</label>
        <sharedTo>
            <roleAndSubordinatesInternal>South_Africa_CIB_Coverage_Coastal_Regions</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GC_Corridor_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Corridor__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corridor__c</field>
            <operation>equals</operation>
            <value>asia,uk,uae,usa,eu,china,us,APAC EXCL CHINA</value>
        </filters>
        <label>GC Corridor Clients</label>
    </listViews>
    <listViews>
        <fullName>Global_Clients_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Segment__c</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hub_F__c</field>
            <operation>contains</operation>
            <value>global clients</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Relationship_Group,Account.Prospect</value>
        </filters>
        <label>Global Clients Clients</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Global_Corporate</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Markets_Key_Relationships</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>MyMI_CIB_Parent_ID__c</columns>
        <columns>Client_Hierarchy_ID__c</columns>
        <columns>Markets_Key_Relationship__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Relationship_Group,Account.Prospect</value>
        </filters>
        <filters>
            <field>Markets_Key_Relationship__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Client_Country__c</field>
            <operation>equals</operation>
            <value>South Africa</value>
        </filters>
        <label>Markets Key Relationships</label>
    </listViews>
    <listViews>
        <fullName>My_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT_NAME</columns>
        <columns>Coverage_country__c</columns>
        <columns>SDS__c</columns>
        <columns>Last_Leadership_Call_Report__c</columns>
        <columns>Last_Coverage_Banker_call_report__c</columns>
        <columns>Last_CSM_Call_Report__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client</value>
        </filters>
        <label>My Clients</label>
    </listViews>
    <listViews>
        <fullName>My_Global_Parent_Names</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Global Parent</value>
        </filters>
        <label>My Global Parent Names</label>
    </listViews>
    <listViews>
        <fullName>My_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Prospect</value>
        </filters>
        <label>My Prospects</label>
    </listViews>
    <listViews>
        <fullName>My_Teams_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT_NAME</columns>
        <columns>Coverage_country__c</columns>
        <columns>SDS__c</columns>
        <columns>Last_Leadership_Call_Report__c</columns>
        <columns>Last_Coverage_Banker_call_report__c</columns>
        <columns>Last_CSM_Call_Report__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client</value>
        </filters>
        <label>My Teams Clients</label>
    </listViews>
    <listViews>
        <fullName>My_Teams_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Prospect</value>
        </filters>
        <label>My Teams Prospects</label>
    </listViews>
    <listViews>
        <fullName>NBFI_Relationship_Groups</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team_F__c</field>
            <operation>contains</operation>
            <value>nbfi</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Relationship Group</value>
        </filters>
        <label>NBFI Relationship Groups</label>
    </listViews>
    <listViews>
        <fullName>X1_All_Relationships</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT_NAME</columns>
        <columns>Coverage_country__c</columns>
        <columns>SDS__c</columns>
        <columns>Last_Leadership_Call_Report__c</columns>
        <columns>Last_Coverage_Banker_call_report__c</columns>
        <columns>Last_CSM_Call_Report__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Relationships</label>
    </listViews>
    <listViews>
        <fullName>X2_All_Clients</fullName>
        <columns>CIF__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT_NAME</columns>
        <columns>Coverage_country__c</columns>
        <columns>SDS__c</columns>
        <columns>Last_Leadership_Call_Report__c</columns>
        <columns>Last_Coverage_Banker_call_report__c</columns>
        <columns>Last_CSM_Call_Report__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client</value>
        </filters>
        <label>All Clients</label>
    </listViews>
    <recordTypes>
        <fullName>CSC_Prospect</fullName>
        <active>false</active>
        <description>When the CSC can&apos;t match the Client CIF, they will load this as a client till we match the SDS with CIF number.</description>
        <label>CSC Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <description>The page layout for existing clients</description>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client_Individual</fullName>
        <active>true</active>
        <description>Client - Individual record type</description>
        <label>Client - Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client_Legal_Entity</fullName>
        <active>true</active>
        <description>Client - Legal Entity record type</description>
        <label>Client - Legal Entity</label>
    </recordTypes>
    <recordTypes>
        <fullName>EDC_Client</fullName>
        <active>true</active>
        <description>This Client is only for EDC TM</description>
        <label>EDC Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>On_Off_Panel_Law_Firm</fullName>
        <active>true</active>
        <description>Law Firms used in the Legal and Litigation Quote Requests</description>
        <label>On/Off Panel Law Firm</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <description>The page layout for non existing clients</description>
        <label>Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect_Individual</fullName>
        <active>true</active>
        <description>The page layout for individual accounts</description>
        <label>Prospect - Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect_Legal_Entity</fullName>
        <active>true</active>
        <description>Prospect - Legal Entity record type</description>
        <label>Prospect - Legal Entity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Related_Party</fullName>
        <active>true</active>
        <label>Related Party</label>
    </recordTypes>
    <recordTypes>
        <fullName>Relationship_Group</fullName>
        <active>true</active>
        <label>Relationship Group</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>SiteMandatory</fullName>
        <active>true</active>
        <description>Make Relationship Site Mandatory on Prospects where Segment is Global Corporate or GDO</description>
        <errorConditionFormula>AND 
( 
OR(ISPICKVAL(Segment__c, &apos;Global Corporate&apos;),ISPICKVAL(Segment__c, &apos;Global Development Organisation (GDO)&apos;)),
ISPICKVAL ( Relationship_Corridor__c,&apos;&apos; ), 
$RecordType.Name = &quot;Prospect&quot;,
OR(ISNEW(),ISCHANGED(Site),ISCHANGED(Segment__c))
)</errorConditionFormula>
        <errorDisplayField>Relationship_Corridor__c</errorDisplayField>
        <errorMessage>Please select a Relationship corridor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SwiftCode_IsEmpty</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL(Type, &apos;Bank&apos;), ISBLANK( Swift_Code__c )  )</errorConditionFormula>
        <errorDisplayField>Swift_Code__c</errorDisplayField>
        <errorMessage>Please provide a Swift Code for this Relationship.</errorMessage>
    </validationRules>
</CustomObject>